Resolved datetime input text colliding with clear button & create/edit row css collapsing

--- a/frontend/src/Editor/QueryManager/QueryEditors/TooljetDatabase/DateTimePicker/styles.scss
+++ b/frontend/src/Editor/QueryManager/QueryEditors/TooljetDatabase/DateTimePicker/styles.scss
@@ -210,3 +210,8 @@
 .null-value-padding {
   padding: 0 9px !important;
 }
+
+.input-value-padding {
+  box-sizing: border-box;
+  padding-right: 30px !important;
+}
